--- a/HTML/Assignment/assignment1.html
+++ b/HTML/Assignment/assignment1.html
@@ -9,7 +9,7 @@
     <header>
         <h1 style="color:darkblue;">Sneha Tripathi</h1>
         <h3>web developer</h3>
-        <img src="https://i.pinimg.com/originals/f8/db/1f/f8db1fdb0781a8a7ecfddf0fc308c49f.jpg" alt="profile picture" width="300" height="300">
+        <img src="https://static.vecteezy.com/system/resources/previews/020/389/525/non_2x/hand-drawing-cartoon-girl-cute-girl-drawing-for-profile-picture-vector.jpg" alt="profile picture" width="300" height="300">
     </header>
 
     <!-- Contact Section -->
