--- a/HTML/Experiment/index.html
+++ b/HTML/Experiment/index.html
@@ -1,171 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
-    
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-        header, footer {
-            text-align: center;
-            background: #f0f0f0;
-            padding: 10px;
-        }
-        section {
-            margin: 20px 0;
-        }
-        figure {
-            text-align: center;
-            color: blueviolet;
-        }
-        img {
-            width: 150px;
-            border-radius: 50%;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 15px;
-        }
-        th, td {
-            border: 1px solid #333;
-            padding: 10px;
-            text-align: center;
-        }
-        thead {
-            background: #d1e7dd;
-        }
-        tfoot {
-            background: #f8d7da;
-        }
-    </style>
-</head>
-<body>
-
-    <!-- Header Section -->
-    <header>
-        <h1>My Portfolio</h1>
-        <h3>Front-End Developer</h3>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>About Us | NovaTech Atelier</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Playfair+Display:wght@600;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <!-- Header -->
+    <header id="about-header" role="banner">
+      <h1>About NovaTech Atelier</h1>
+      <p>
+        Design-forward technology studio crafting elegant, intelligent
+        experiences for modern enterprises.
+      </p>
     </header>
 
-     <!-- Profile Section -->
-    <section>
-        <h2>About Me</h2>
-        <figure>
-            <img src="https://static.vecteezy.com/system/resources/previews/020/389/525/non_2x/hand-drawing-cartoon-girl-cute-girl-drawing-for-profile-picture-vector.jpg" alt="My Profile Photo">
-            <figcaption>Sneha Tripathi - Aspiring Front-End Developer</figcaption>
-        </figure>
-        <p>Hello! I am Sneha Tripathi, passionate about creating clean and user-friendly websites. 
-        Skilled in HTML, CSS, JavaScript, and learning modern frameworks.</p>
-    </section>
-
-    <!-- Education Section -->
-    <section>
-        <h2>Education</h2>
-        <ul>
-            <li>Btech in computer science- GLA University (2024-2028)</li>
+    <main class="container" role="main">
+      <!-- Who we are -->
+      <section class="section card" id="about">
+        <h2 class="section-title">Who We Are</h2>
+        <p class="lead">
+          NovaTech Atelier blends design excellence with deep engineering. We
+          partner with discerning brands to build AI-powered platforms, refined
+          interfaces, and resilient cloud systems that scale gracefully.
+        </p>
+        <p>
+          With teams across 4 continents and a portfolio spanning fintech,
+          luxury retail, and healthcare, our craft balances rigor and beauty.
+          Browse our
+          <a href="https://example.com/case-studies" target="_blank"
+            >case studies</a
+          >
+          to see the detail.
+        </p>
+        <ul class="values">
+          <li>Elegance in function</li>
+          <li>Responsible AI and privacy</li>
+          <li>Measurable business outcomes</li>
         </ul>
-    </section>
+      </section>
 
-    <!-- Skills Section -->
-    <section>
-        <h2>Skills</h2>
-        <ul>
-            <li>HTML, CSS, JavaScript</li>
-            <li>React & Node.js</li>
-            <li>Database: MySQL, MongoDB</li>
-        </ul>
-    </section>
+      <!-- Mission -->
+      <section class="section card" id="mission">
+        <h2 class="section-title">Our Mission</h2>
+        <blockquote>
+          To shape digital ecosystems where aesthetics, intelligence, and
+          performance coexist—quietly powerful, unmistakably premium.
+        </blockquote>
+      </section>
 
-    <!-- Contact Section -->
-    <section>
-        <h2>Contact</h2>
-        <p>Email: snehatripathi@example.com</p>
-        <p>Phone: +91-9876543210</p>
-    </section>
+      <!-- Team -->
+      <section class="section card" id="team">
+        <h2 class="section-title">Leadership</h2>
+        <div class="team">
+          <article class="member" data-role="ceo">
+            <img
+              src="https://randomuser.me/api/portraits/men/32.jpg"
+              alt="Portrait of Oliver Kent"
+            />
+            <h3>Oliver Kent</h3>
+            <small>Chief Executive Officer</small>
+            <p>
+              Steers vision and partnerships with a focus on design-led
+              strategy.
+            </p>
+          </article>
 
-    <!-- Timetable Section -->
-    <section>
-        <h2>My Academic Timetable</h2>
-        <table>
-            <thead>
-                <tr>
-                    <th>Day</th>
-                    <th>8:00 - 9:00</th>
-                    <th>9:00 - 10:00</th>
-                    <th>10:00 - 11:00</th>
-                    <th>11:00 - 12:00</th>
-                    <th>12:00 - 1:00</th>
-                    <th>1:00 - 2:00</th>
-                    <th>2:00 - 3:00</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Monday</td>
-                    <td>Oops (object oriented programming)</td>
-                    <td>Frontend Development</td>
-                    <td>English</td>
-                    <td>Discrete Mathematics</td>
-                    <td>Lunch</td>
-                    <td>  </td>
-                    <td>DBMS</td>
-                </tr>
-                <tr>
-                    <td>Tuesday</td>
-                    <td>DBMS Lab</td>
-                    <td>DBMS Lab</td>
-                    <td>English </td>
-                    <td>Discrete Mathematics</td>
-                    <td>Lunch</td>
-                    <td>Frontend Development  </td>
-                    <td>  </td>
-                </tr>
-                <tr>
-                    <td>Wednesday</td>
-                    <td>Computer organization Lab</td>
-                    <td>Computer organization Lab</td>
-                    <td>Frontend Development</td>
-                    <td>   </td>
-                    <td>Lunch</td>
-                    <td>DBMS</td>
-                    <td>computer organization</td>
-                </tr>
-                 <tr>
-                    <td>Thursday</td>
-                    <td>Discrete Mathematics</td>
-                    <td>English</td>
-                    <td>Frontend Development</td>
-                    <td>Oops</td>
-                    <td>Lunch</td>
-                    <td>computer organization</td>
-                    <td>DBMS</td>
-                </tr>
-                 <tr>
-                    <td>Friday</td>
-                    <td>DBMS</td>
-                    <td>Discrete Mathematics tut</td>
-                    <td>Frontend Development</td>
-                    <td>Eng tut</td>
-                    <td>Lunch</td>
-                    <td>   </td>
-                    <td>computer organization</td>
-                </tr>
-            </tbody>
-            <tfoot>
-                <tr>
-                    <td colspan="8">* Timetable subject to change during exams</td>
-                </tr>
-            </tfoot>
-        </table>
-    </section>
+          <article class="member" data-role="cto">
+            <img
+              src="https://randomuser.me/api/portraits/women/45.jpg"
+              alt="Portrait of Isla Moreau"
+            />
+            <h3>Isla Moreau</h3>
+            <small>Chief Technology Officer</small>
+            <p>
+              Architects our AI and cloud foundations for reliability and speed.
+            </p>
+          </article>
 
-    <!-- Footer Section -->
-    <footer>
-        <p>&copy; 2025 Sneha Tripathi | All Rights Reserved</p>
-    </footer>
+          <article class="member" data-role="cdo">
+            <img
+              src="https://randomuser.me/api/portraits/men/54.jpg"
+              alt="Portrait of Rafael Ayers"
+            />
+            <h3>Rafael Ayers</h3>
+            <small>Chief Design Officer</small>
+            <p>
+              Leads product aesthetics and interaction systems with a human
+              touch.
+            </p>
+          </article>
+        </div>
+      </section>
 
+      <!-- CTA -->
+      <section class="section card" id="contact">
+        <div class="cta" role="region" aria-label="Contact CTA">
+          <div>
+            <h3
+              style="
+                margin: 0 0 0.25rem;
+                font-family: 'Playfair Display', serif;
+              "
+            >
+              Work with us
+            </h3>
+            <p style="margin: 0; color: var(--muted)">
+              Let’s craft something quietly spectacular together.
+            </p>
+          </div>
+          <a
+            class="btn"
+            href="https://example.com/contact"
+            target="_blank"
+            rel="noopener"
+            >Start a conversation</a
+          >
+        </div>
+      </section>
+    </main>
+
+    <footer>© 2025 NovaTech Atelier — Crafted with care.</footer>
+  </body>
+</html>
